fixed DateField in TrackList added copyToTracks button added SetDataController

--- a/src/Beans.mxml
+++ b/src/Beans.mxml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <swiz:BeanProvider xmlns:swiz="http://swiz.swizframework.org"
-				   xmlns:fx="http://ns.adobe.com/mxml/2009"
-				   xmlns:s="library://ns.adobe.com/flex/spark"
-				   xmlns:mx="library://ns.adobe.com/flex/mx"
-				   xmlns:model="com.dasflash.soundcloud.scup.model.*"
-				   xmlns:ctrl="com.dasflash.soundcloud.scup.controller.*">
-	
-	<model:SetData id="setData" />
-	
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+	xmlns:mx="library://ns.adobe.com/flex/mx"
+	xmlns:model="com.dasflash.soundcloud.scup.model.*"
+	xmlns:ctrl="com.dasflash.soundcloud.scup.controller.*">
+
+	<model:SetData id="setData"/>
+
 	<model:UserData id="userData"/>
-	
+
+	<ctrl:SetDataController/>
+
 	<ctrl:SoundcloudAPIController/>
-	
+
 	<ctrl:MainWindowController/>
-	
+
 	<ctrl:AuthWindowController/>
-	
+
 	<ctrl:UpdaterController/>
-	
+
 	<ctrl:ThrobberController/>
-	
+
 	<model:UserSettings/>
-	
+
 </swiz:BeanProvider>
