--- a/src/com/dasflash/soundcloud/scup/view/skins/DropDownItemRenderer.mxml
+++ b/src/com/dasflash/soundcloud/scup/view/skins/DropDownItemRenderer.mxml
@@ -2,7 +2,8 @@
 <s:ItemRenderer focusEnabled="false"
 	xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/mx">
+	xmlns:mx="library://ns.adobe.com/flex/mx"
+	autoDrawBackground="false">
 
 
 	<s:states>
